bug fix for naive.ipynb (#6)
Fix for below error:

```
0it [00:00, ?it/s]INFO:__main__:Starting prediction on 42 series.
INFO:__main__:Processing final batch.
---------------------------------------------------------------------------
KeyError                                  Traceback (most recent call last)
Cell In[5], line 88
     79 predictor = NaivePredictor(
     80     dataset.prediction_length,
     81     season_length=season_length,
   (...)
     84     batch_size=512,
     85 )
     87 # Measure the time taken for evaluation
---> 88 res = evaluate_model(
     89     predictor,
     90     test_data=dataset.test_data,
     91     metrics=metrics,
     92     batch_size=512,
     93     axis=None,
     94     mask_invalid_label=True,
     95     allow_nan_forecast=False,
     96     seasonality=season_length,
     97 )
     99 # Append the results to the CSV file
    100 with open(csv_file_path, "a", newline="") as csvfile:

File ~/envs/toto_eval_env/lib/python3.10/site-packages/gluonts/model/evaluation.py:262, in evaluate_model(model, test_data, metrics, axis, batch_size, mask_invalid_label, allow_nan_forecast, seasonality)
    247 """
    248 Evaluate `model when applied to test_data, according to metrics.
    249 
   (...)
    258 Return results as a Pandas `DataFrame.
    259 """
    260 forecasts = model.predict(test_data.input)
--> 262 return evaluate_forecasts(
    263     forecasts=forecasts,
    264     test_data=test_data,
    265     metrics=metrics,
    266     axis=axis,
    267     batch_size=batch_size,
    268     mask_invalid_label=mask_invalid_label,
    269     allow_nan_forecast=allow_nan_forecast,
    270     seasonality=seasonality,
    271 )

File ~/envs/toto_eval_env/lib/python3.10/site-packages/gluonts/model/evaluation.py:207, in evaluate_forecasts(forecasts, test_data, metrics, axis, batch_size, mask_invalid_label, allow_nan_forecast, seasonality)
    182 def evaluate_forecasts(
    

--- a/notebooks/naive.ipynb
+++ b/notebooks/naive.ipynb
@@ -294,6 +294,7 @@
     "    def yield_forecast(\n",
     "        self, item_ids, results: pd.DataFrame\n",
     "    ) -> Iterator[QuantileForecast]:\n",
+    "        results.set_index('unique_id',inplace=True)\n",
     "        for idx in item_ids:\n",
     "            prediction = results.loc[idx]\n",
     "            forecast_arrays = []\n",
