Update TabPFN-TS results (#34)
### Contribution:
- Update [TabPFN-TS](https://github.com/liam-sbhoo/tabpfn-time-series)
results

Thanks a lot for maintaining this!

--- a/notebooks/tabpfn_ts.ipynb
+++ b/notebooks/tabpfn_ts.ipynb
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# !git clone https://github.com/PriorLabs/tabpfn-time-series.git\n",
-    "# !cd tabpfn-time-series && git checkout v0.1.3\n",
+    "# !cd tabpfn-time-series && git checkout v1.0.0\n",
     "# %pip install -r tabpfn-time-series/requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['bizitobs_l2c/H', 'm4_weekly']"
+       "['m4_weekly', 'bizitobs_l2c/H']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -408,75 +408,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>bizitobs_l2c/H/short</td>\n",
+       "      <td>m4_weekly/W/short</td>\n",
        "      <td>tabpfn_ts</td>\n",
-       "      <td>86.493645</td>\n",
-       "      <td>86.493645</td>\n",
-       "      <td>6.468297</td>\n",
-       "      <td>0.639599</td>\n",
-       "      <td>0.716701</td>\n",
-       "      <td>0.706698</td>\n",
-       "      <td>6.522674</td>\n",
-       "      <td>9.300196</td>\n",
-       "      <td>0.501304</td>\n",
-       "      <td>0.348658</td>\n",
-       "      <td>0.289934</td>\n",
-       "      <td>Web/CloudOps</td>\n",
-       "      <td>7</td>\n",
+       "      <td>218095.516606</td>\n",
+       "      <td>218095.516606</td>\n",
+       "      <td>249.352368</td>\n",
+       "      <td>2.054154</td>\n",
+       "      <td>0.062038</td>\n",
+       "      <td>0.063341</td>\n",
+       "      <td>18.725226</td>\n",
+       "      <td>467.006977</td>\n",
+       "      <td>0.085081</td>\n",
+       "      <td>0.045428</td>\n",
+       "      <td>0.037043</td>\n",
+       "      <td>Econ/Fin</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bizitobs_l2c/H/medium</td>\n",
+       "      <td>bizitobs_l2c/H/short</td>\n",
        "      <td>tabpfn_ts</td>\n",
-       "      <td>111.337649</td>\n",
-       "      <td>111.337649</td>\n",
-       "      <td>7.189401</td>\n",
-       "      <td>0.741873</td>\n",
-       "      <td>1.058227</td>\n",
-       "      <td>0.808287</td>\n",
-       "      <td>7.147537</td>\n",
-       "      <td>10.551666</td>\n",
-       "      <td>0.638919</td>\n",
-       "      <td>0.435329</td>\n",
-       "      <td>0.378027</td>\n",
+       "      <td>59.039776</td>\n",
+       "      <td>59.039776</td>\n",
+       "      <td>4.946666</td>\n",
+       "      <td>0.485770</td>\n",
+       "      <td>0.562060</td>\n",
+       "      <td>0.667656</td>\n",
+       "      <td>3.658850</td>\n",
+       "      <td>7.683734</td>\n",
+       "      <td>0.414173</td>\n",
+       "      <td>0.266638</td>\n",
+       "      <td>0.210046</td>\n",
        "      <td>Web/CloudOps</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>bizitobs_l2c/H/long</td>\n",
+       "      <td>bizitobs_l2c/H/medium</td>\n",
        "      <td>tabpfn_ts</td>\n",
-       "      <td>144.894841</td>\n",
-       "      <td>144.894841</td>\n",
-       "      <td>8.739238</td>\n",
-       "      <td>0.922590</td>\n",
-       "      <td>1.397160</td>\n",
-       "      <td>0.821399</td>\n",
-       "      <td>7.941592</td>\n",
-       "      <td>12.037227</td>\n",
-       "      <td>0.735269</td>\n",
-       "      <td>0.533818</td>\n",
-       "      <td>0.441510</td>\n",
+       "      <td>78.745433</td>\n",
+       "      <td>78.745433</td>\n",
+       "      <td>4.947976</td>\n",
+       "      <td>0.490156</td>\n",
+       "      <td>0.464801</td>\n",
+       "      <td>0.771996</td>\n",
+       "      <td>3.580094</td>\n",
+       "      <td>8.873862</td>\n",
+       "      <td>0.537326</td>\n",
+       "      <td>0.299607</td>\n",
+       "      <td>0.237516</td>\n",
        "      <td>Web/CloudOps</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>m4_weekly/W/short</td>\n",
+       "      <td>bizitobs_l2c/H/long</td>\n",
        "      <td>tabpfn_ts</td>\n",
-       "      <td>201602.495822</td>\n",
-       "      <td>201602.495822</td>\n",
-       "      <td>244.937969</td>\n",
-       "      <td>2.060498</td>\n",
-       "      <td>0.060204</td>\n",
-       "      <td>0.060695</td>\n",
-       "      <td>16.147589</td>\n",
-       "      <td>449.001666</td>\n",
-       "      <td>0.081801</td>\n",
-       "      <td>0.044624</td>\n",
-       "      <td>0.035910</td>\n",
-       "      <td>Econ/Fin</td>\n",
-       "      <td>1</td>\n",
+       "      <td>98.492392</td>\n",
+       "      <td>98.492392</td>\n",
+       "      <td>6.141444</td>\n",
+       "      <td>0.663101</td>\n",
+       "      <td>0.844479</td>\n",
+       "      <td>0.845980</td>\n",
+       "      <td>4.982419</td>\n",
+       "      <td>9.924333</td>\n",
+       "      <td>0.606207</td>\n",
+       "      <td>0.375137</td>\n",
+       "      <td>0.291841</td>\n",
+       "      <td>Web/CloudOps</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -484,37 +484,37 @@
       ],
       "text/plain": [
        "                 dataset      model  eval_metrics/MSE[mean]  \\\n",
-       "0   bizitobs_l2c/H/short  tabpfn_ts               86.493645   \n",
-       "1  bizitobs_l2c/H/medium  tabpfn_ts              111.337649   \n",
-       "2    bizitobs_l2c/H/long  tabpfn_ts              144.894841   \n",
-       "3      m4_weekly/W/short  tabpfn_ts           201602.495822   \n",
+       "0      m4_weekly/W/short  tabpfn_ts           218095.516606   \n",
+       "1   bizitobs_l2c/H/short  tabpfn_ts               59.039776   \n",
+       "2  bizitobs_l2c/H/medium  tabpfn_ts               78.745433   \n",
+       "3    bizitobs_l2c/H/long  tabpfn_ts               98.492392   \n",
        "\n",
        "   eval_metrics/MSE[0.5]  eval_metrics/MAE[0.5]  eval_metrics/MASE[0.5]  \\\n",
-       "0              86.493645               6.468297                0.639599   \n",
-       "1             111.337649               7.189401                0.741873   \n",
-       "2             144.894841               8.739238                0.922590   \n",
-       "3          201602.495822             244.937969                2.060498   \n",
+       "0          218095.516606             249.352368                2.054154   \n",
+       "1              59.039776               4.946666                0.485770   \n",
+       "2              78.745433               4.947976                0.490156   \n",
+       "3              98.492392               6.141444                0.663101   \n",
        "\n",
        "   eval_metrics/MAPE[0.5]  eval_metrics/sMAPE[0.5]  eval_metrics/MSIS  \\\n",
-       "0                0.716701                 0.706698           6.522674   \n",
-       "1                1.058227                 0.808287           7.147537   \n",
-       "2                1.397160                 0.821399           7.941592   \n",
-       "3                0.060204                 0.060695          16.147589   \n",
+       "0                0.062038                 0.063341          18.725226   \n",
+       "1                0.562060                 0.667656           3.658850   \n",
+       "2                0.464801                 0.771996           3.580094   \n",
+       "3                0.844479                 0.845980           4.982419   \n",
        "\n",
        "   eval_metrics/RMSE[mean]  eval_metrics/NRMSE[mean]  eval_metrics/ND[0.5]  \\\n",
-       "0                 9.300196                  0.501304              0.348658   \n",
-       "1                10.551666                  0.638919              0.435329   \n",
-       "2                12.037227                  0.735269              0.533818   \n",
-       "3               449.001666                  0.081801              0.044624   \n",
+       "0               467.006977                  0.085081              0.045428   \n",
+       "1                 7.683734                  0.414173              0.266638   \n",
+       "2                 8.873862                  0.537326              0.299607   \n",
+       "3                 9.924333                  0.606207              0.375137   \n",
        "\n",
        "   eval_metrics/mean_weighted_sum_quantile_loss        domain  num_variates  \n",
-       "0                                      0.289934  Web/CloudOps             7  \n",
-       "1                                      0.378027  Web/CloudOps             7  \n",
-       "2                                      0.441510  Web/CloudOps             7  \n",
-       "3                                      0.035910      Econ/Fin             1  "
+       "0                                      0.037043      Econ/Fin             1  \n",
+       "1                                      0.210046  Web/CloudOps             7  \n",
+       "2                                      0.237516  Web/CloudOps             7  \n",
+       "3                                      0.291841  Web/CloudOps             7  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
