Ibm granite flowstate r1 clean (#57)
Dear @cuthalionn 

We would also like to add our production-ready model.
It has a separate model card, and is the same architecture and size as
before, with the difference that it only uses enterprise-grade data.
It uses less data, with slightly decreased performance compared to the
research model.
cc: @bohnstingl @wgifford @s3woz

--- a/notebooks/flowstate.ipynb
+++ b/notebooks/flowstate.ipynb
@@ -126,9 +126,11 @@
     "model_dir = './checkpoints'\n",
     "config_dir = './configs'\n",
     "out_dir = './results/FlowState-9.1M'\n",
+    "# out_dir = './results/granite-flowstate-r1' # to recreate the results of granite-flowstate-r1 uncomment this line and the one below\n",
     "\n",
     "# Model configurations\n",
     "model_name = 'ibm-research/FlowState'\n",
+    "# model_name = 'ibm-granite/granite-timeseries-flowstate-r1' # to recreate the results of granite-flowstate-r1 uncomment this line and the one above\n",
     "\n",
     "# Auxiliary configurations\n",
     "seed = 0\n",
