--- a/notebooks/tirex.ipynb
+++ b/notebooks/tirex.ipynb
@@ -16,26 +16,17 @@
     "Before proceeding, ensure you have the following:\n",
     "(Note: You need a Nvidia GPU with [CUDA compute capabality >= 8.0](https://developer.nvidia.com/cuda-gpus))\n",
     "\n",
-    "1. **Optional but suggested: Install conda environment specifed in TiRex Repo**\n",
+    "1. **Install in conda environment**\n",
     "\n",
     "```bash\n",
-    "git clone github.com/NX-AI/tirex\n",
-    "conda env create --file ./tirex/requirements_py26.yaml\n",
+    "conda create -c conda-forge python=3.11 pip cuda=12.4 cuda-nvcc=12.4 gxx_linux-64=11.4.0 compilers cmake ninja cuda-toolkit=12.4 cuda-cccl=12.4 --name tirex\n",
     "conda activate tirex\n",
     "```\n",
     "\n",
     "2. **Install TiRex**\n",
     "\n",
     "```bash\n",
-    "git clone github.com/NX-AI/tirex  # if not cloned before\n",
-    "cd tirex\n",
-    "pip install .  # install tirex\n",
-    "```\n",
-    "\n",
-    "3. **Install additional dependecies needed for GiftEval benchmark**\n",
-    "\n",
-    "```bash\n",
-    "pip install gluonts dotenv datasets\n",
+    "pip install \"tirex-ts[all]==1.3.0\"\n",
     "```"
    ]
   },
@@ -45,11 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# This is the data.py file as in GiftEval but fixed so that one can run it with numpy >2.0.0\n",
-    "# (Extended/Fixed the frequency alias)\n",
-    "#\n",
-    "\n",
     "import os\n",
     "import math\n",
     "from functools import cached_property\n",
@@ -461,7 +447,7 @@
     "\n",
     "#os.environ[\"GIFT-EVAL\"] = \"/path/to/gifteval\" # Set GIFT-EVAL data path if not already specified\n",
     "\n",
-    "model : ForecastModel = load_model(\"NX-AI/TiRex-1.1-gifteval\")\n",
+    "model : ForecastModel = load_model(\"NX-AI/TiRex-1.1-gifteval\", backend=\"cuda\", device=\"cuda\")\n",
     "\n",
     "wrapped_model = TiRexGiftEvalWrapper(model, resample_strategy=\"frequency\")\n",
     "results = []\n",
