--- a/notebooks/chronos-2.ipynb
+++ b/notebooks/chronos-2.ipynb
@@ -39,10 +39,10 @@
     "# Load environment variables\n",
     "load_dotenv()\n",
     "\n",
-    "#SHORT_DATASETS = \"m4_yearly m4_quarterly m4_monthly m4_weekly m4_daily m4_hourly electricity/15T electricity/H electricity/D electricity/W solar/10T solar/H solar/D solar/W hospital covid_deaths us_births/D us_births/M us_births/W saugeenday/D saugeenday/M saugeenday/W temperature_rain_with_missing kdd_cup_2018_with_missing/H kdd_cup_2018_with_missing/D car_parts_with_missing restaurant hierarchical_sales/D hierarchical_sales/W LOOP_SEATTLE/5T LOOP_SEATTLE/H LOOP_SEATTLE/D SZ_TAXI/15T SZ_TAXI/H M_DENSE/H M_DENSE/D ett1/15T ett1/H ett1/D ett1/W ett2/15T ett2/H ett2/D ett2/W jena_weather/10T jena_weather/H jena_weather/D bitbrains_fast_storage/5T bitbrains_fast_storage/H bitbrains_rnd/5T bitbrains_rnd/H bizitobs_application bizitobs_service bizitobs_l2c/5T bizitobs_l2c/H\"\n",
+    "# SHORT_DATASETS = \"m4_yearly m4_quarterly m4_monthly m4_weekly m4_daily m4_hourly electricity/15T electricity/H electricity/D electricity/W solar/10T solar/H solar/D solar/W hospital covid_deaths us_births/D us_births/M us_births/W saugeenday/D saugeenday/M saugeenday/W temperature_rain_with_missing kdd_cup_2018_with_missing/H kdd_cup_2018_with_missing/D car_parts_with_missing restaurant hierarchical_sales/D hierarchical_sales/W LOOP_SEATTLE/5T LOOP_SEATTLE/H LOOP_SEATTLE/D SZ_TAXI/15T SZ_TAXI/H M_DENSE/H M_DENSE/D ett1/15T ett1/H ett1/D ett1/W ett2/15T ett2/H ett2/D ett2/W jena_weather/10T jena_weather/H jena_weather/D bitbrains_fast_storage/5T bitbrains_fast_storage/H bitbrains_rnd/5T bitbrains_rnd/H bizitobs_application bizitobs_service bizitobs_l2c/5T bizitobs_l2c/H\"\n",
     "SHORT_DATASETS = \"m4_weekly\"\n",
     "\n",
-    "#MED_LONG_DATASETS = \"electricity/15T electricity/H solar/10T solar/H kdd_cup_2018_with_missing/H LOOP_SEATTLE/5T LOOP_SEATTLE/H SZ_TAXI/15T M_DENSE/H ett1/15T ett1/H ett2/15T ett2/H jena_weather/10T jena_weather/H bitbrains_fast_storage/5T bitbrains_rnd/5T bizitobs_application bizitobs_service bizitobs_l2c/5T bizitobs_l2c/H\"\n",
+    "# MED_LONG_DATASETS = \"electricity/15T electricity/H solar/10T solar/H kdd_cup_2018_with_missing/H LOOP_SEATTLE/5T LOOP_SEATTLE/H SZ_TAXI/15T M_DENSE/H ett1/15T ett1/H ett2/15T ett2/H jena_weather/10T jena_weather/H bitbrains_fast_storage/5T bitbrains_rnd/5T bizitobs_application bizitobs_service bizitobs_l2c/5T bizitobs_l2c/H\"\n",
     "MED_LONG_DATASETS = \"bizitobs_l2c/H\"\n",
     "\n",
     "# Get union of short and med_long datasets\n",
@@ -110,18 +110,19 @@
     "        batch_size: int,\n",
     "        quantile_levels: list[float] = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
     "        predict_batches_jointly: bool = False,\n",
-    "        **kwargs\n",
+    "        **kwargs,\n",
     "    ):\n",
     "        self.pipeline = BaseChronosPipeline.from_pretrained(\n",
     "            model_name,\n",
     "            **kwargs,\n",
     "        )\n",
-    "        assert isinstance(self.pipeline, Chronos2Pipeline), \"This is Predictor is for Chronos-2, see other notebook for Chronos and Chronos-Bolt\"\n",
+    "        assert isinstance(\n",
+    "            self.pipeline, Chronos2Pipeline\n",
+    "        ), \"This is Predictor is for Chronos-2, see other notebook for Chronos and Chronos-Bolt\"\n",
     "        self.prediction_length = prediction_length\n",
     "        self.batch_size = batch_size\n",
     "        self.quantile_levels = quantile_levels\n",
     "        self.predict_batches_jointly = predict_batches_jointly\n",
-    "\n",
     "\n",
     "    def _pack_model_items(self, items):\n",
     "        for item in items:\n",
@@ -130,38 +131,45 @@
     "            }\n",
     "            yield model_input\n",
     "\n",
-    "\n",
     "    def predict(self, test_data_input) -> List[Forecast]:\n",
     "        pipeline = self.pipeline\n",
     "        model_batch_size = self.batch_size\n",
     "        if self.predict_batches_jointly:\n",
-    "            logger.info(\"Note: Using cross learning mode. Please ensure that different rolling windows of the same time series are not in `test_data_input` to avoid any potential leakage due to in-context learning.\")\n",
+    "            logger.info(\n",
+    "                \"Note: Using cross learning mode. Please ensure that different rolling windows of the same time series are not in `test_data_input` to avoid any potential leakage due to in-context learning.\"\n",
+    "            )\n",
     "\n",
     "        # Generate forecasts\n",
     "        forecast_outputs = []\n",
     "        input_data = list(self._pack_model_items(test_data_input))\n",
-    "        is_univariate_data = input_data[0][\"target\"].ndim == 1  # homogenous across all intputs\n",
+    "        is_univariate_data = (\n",
+    "            input_data[0][\"target\"].ndim == 1\n",
+    "        )  # homogenous across all intputs\n",
     "        while True:\n",
     "            try:\n",
     "                quantiles, _ = pipeline.predict_quantiles(\n",
-    "                        inputs=input_data,\n",
-    "                        prediction_length=self.prediction_length,\n",
-    "                        batch_size=model_batch_size,\n",
-    "                        quantile_levels=self.quantile_levels,\n",
-    "                        predict_batches_jointly=self.predict_batches_jointly,\n",
+    "                    inputs=input_data,\n",
+    "                    prediction_length=self.prediction_length,\n",
+    "                    batch_size=model_batch_size,\n",
+    "                    quantile_levels=self.quantile_levels,\n",
+    "                    predict_batches_jointly=self.predict_batches_jointly,\n",
     "                )\n",
     "                quantiles = torch.stack(quantiles)\n",
     "                # quantiles [batch, variates, seq_len, quantiles]\n",
     "                quantiles = quantiles.permute(0, 3, 2, 1).cpu().numpy()\n",
     "                # forecast_outputs [batch, quantiles, seq_len, variates]\n",
     "                if is_univariate_data:\n",
-    "                    quantiles = quantiles.squeeze(-1) # squeeze variate to avoid error in eval due to broadcasting\n",
+    "                    quantiles = quantiles.squeeze(\n",
+    "                        -1\n",
+    "                    )  # squeeze variate to avoid error in eval due to broadcasting\n",
     "                assert quantiles.shape[1] == len(self.quantile_levels)\n",
     "                assert quantiles.shape[2] == self.prediction_length\n",
     "                forecast_outputs.append(quantiles)\n",
     "                break\n",
     "            except torch.cuda.OutOfMemoryError:\n",
-    "                logger.error(f\"OutOfMemoryError at model_batch_size {model_batch_size}, reducing to {model_batch_size // 2}\")\n",
+    "                logger.error(\n",
+    "                    f\"OutOfMemoryError at model_batch_size {model_batch_size}, reducing to {model_batch_size // 2}\"\n",
+    "                )\n",
     "                model_batch_size //= 2\n",
     "\n",
     "        # Convert forecasts into gluonts Forecast objects\n",
@@ -176,7 +184,7 @@
     "                start_date=forecast_start_date,\n",
     "            )\n",
     "            forecasts.append(forecast)\n",
-    "        return forecasts\n"
+    "        return forecasts"
    ]
   },
   {
@@ -257,6 +265,7 @@
     "    \"s3://autogluon/chronos-2\": \"Chronos-2\",\n",
     "}\n",
     "\n",
+    "\n",
     "def evaluate_on_dataset(\n",
     "    model_name: str,\n",
     "    ds_name: str,\n",
@@ -288,18 +297,23 @@
     "        batch_size=batch_size,\n",
     "        **predictor_kwargs,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Avoid cross batch leakage of rolling evalution by prediction of windows individually.\n",
     "    forecast_windows = []\n",
     "    n_windows = dataset.test_data.windows\n",
     "    for window_idx in range(n_windows):\n",
-    "        entries_window_k = list(itertools.islice(dataset.test_data.input, window_idx, None, n_windows))\n",
+    "        entries_window_k = list(\n",
+    "            itertools.islice(dataset.test_data.input, window_idx, None, n_windows)\n",
+    "        )\n",
     "        forecasts_window_k = list(predictor.predict(entries_window_k))\n",
-    "        forecast_windows.append(forecasts_window_k)        \n",
+    "        forecast_windows.append(forecasts_window_k)\n",
     "\n",
-    "    forecasts = [item for items in zip(*forecast_windows) for item in items] # interleave results again\n",
+    "    forecasts = [\n",
+    "        item for items in zip(*forecast_windows) for item in items\n",
+    "    ]  # interleave results again\n",
     "    season_length = get_seasonality(dataset.freq)\n",
-    "    return evaluate_forecasts(\n",
+    "    return (\n",
+    "        evaluate_forecasts(\n",
     "            forecasts,\n",
     "            test_data=dataset.test_data,\n",
     "            metrics=metrics,\n",
@@ -308,9 +322,10 @@
     "            mask_invalid_label=True,\n",
     "            allow_nan_forecast=False,\n",
     "            seasonality=season_length,\n",
-    "        ) \\\n",
-    "    .reset_index(drop=True) \\\n",
-    "    .to_dict(orient=\"records\")\n",
+    "        )\n",
+    "        .reset_index(drop=True)\n",
+    "        .to_dict(orient=\"records\")\n",
+    "    )\n",
     "\n",
     "\n",
     "all_results = []\n",
@@ -319,7 +334,9 @@
     "    logger.info(f\"Processing dataset: {ds_name} ({ds_num + 1} of {len(all_datasets)})\")\n",
     "    terms = [\"short\", \"medium\", \"long\"]\n",
     "    for term in terms:\n",
-    "        if (term == \"medium\" or term == \"long\") and ds_name not in MED_LONG_DATASETS.split():\n",
+    "        if (\n",
+    "            term == \"medium\" or term == \"long\"\n",
+    "        ) and ds_name not in MED_LONG_DATASETS.split():\n",
     "            continue\n",
     "\n",
     "        if \"/\" in ds_name:\n",
@@ -368,7 +385,7 @@
     "    )\n",
     "results_df = pd.DataFrame(result_df_rows).sort_values(by=\"dataset\")\n",
     "results_df.to_csv(output_dir, index=False)\n",
-    "logger.info(f\"Results have been written to {output_dir}.\")\n"
+    "logger.info(f\"Results have been written to {output_dir}.\")"
    ]
   }
  ],
