--- a/notebooks/moirai2.ipynb
+++ b/notebooks/moirai2.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,10 @@
     "\n",
     "from uni2ts.model.moirai2 import Moirai2Forecast, Moirai2Module\n",
     "import logging\n",
+    "\n",
     "# skip the no mean value warning from QuantileForecast\n",
     "logging.getLogger(\"gluonts.model.forecast\").setLevel(logging.ERROR)\n",
+    "\n",
     "\n",
     "def get_device(device=\"auto\"):\n",
     "    if device == \"auto\":\n",
@@ -65,19 +67,20 @@
     "        device = torch.device(device)\n",
     "    return device\n",
     "\n",
+    "\n",
     "class MoiraiQuantilePredictor:\n",
     "    def __init__(\n",
-    "            self,\n",
-    "            model_path: str,\n",
-    "            prediction_length: int = 100,\n",
-    "            context_length: int = 4000,\n",
-    "            target_dim: int =1,\n",
-    "            feat_dynamic_real_dim: int =0,\n",
-    "            past_feat_dynamic_real_dim: int =0,\n",
-    "            device: str = 'auto',\n",
-    "            batch_size: int = 2048,\n",
-    "            quantile_levels: tuple[float] = (0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),\n",
-    "        ):\n",
+    "        self,\n",
+    "        model_path: str,\n",
+    "        prediction_length: int = 100,\n",
+    "        context_length: int = 4000,\n",
+    "        target_dim: int = 1,\n",
+    "        feat_dynamic_real_dim: int = 0,\n",
+    "        past_feat_dynamic_real_dim: int = 0,\n",
+    "        device: str = \"auto\",\n",
+    "        batch_size: int = 2048,\n",
+    "        quantile_levels: tuple[float] = (0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),\n",
+    "    ):\n",
     "        self.model_path = model_path\n",
     "        self.prediction_length = prediction_length\n",
     "        self.context_length = context_length\n",
@@ -102,9 +105,11 @@
     "                print(\"Model - MoiraiQuantile loaded with batch_size:\", self.batch_size)\n",
     "                # Generate forecast samples\n",
     "                forecast_quantiles = []\n",
-    "                for batch in (batcher(test_data_input, batch_size=self.batch_size)):\n",
+    "                for batch in batcher(test_data_input, batch_size=self.batch_size):\n",
     "                    past_target = [entry[\"target\"] for entry in batch]\n",
-    "                    forecasts = self.model.predict(past_target) # full_forecasts shape: (batch num_quantiles future_time #tgt)\n",
+    "                    forecasts = self.model.predict(\n",
+    "                        past_target\n",
+    "                    )  # full_forecasts shape: (batch num_quantiles future_time #tgt)\n",
     "                    forecast_quantiles.append(forecasts)\n",
     "                forecast_quantiles = np.concatenate(forecast_quantiles)\n",
     "                break\n",
@@ -120,10 +125,11 @@
     "            forecast_start_date = ts[\"start\"] + len(ts[\"target\"])\n",
     "            quantile_forecasts.append(\n",
     "                QuantileForecast(\n",
-    "                item_id = ts[\"item_id\"],\n",
-    "                forecast_arrays=item,\n",
-    "                start_date=forecast_start_date,\n",
-    "                forecast_keys=list(map(str, self.quantile_levels)))\n",
+    "                    item_id=ts[\"item_id\"],\n",
+    "                    forecast_arrays=item,\n",
+    "                    start_date=forecast_start_date,\n",
+    "                    forecast_keys=list(map(str, self.quantile_levels)),\n",
+    "                )\n",
     "            )\n",
     "        return quantile_forecasts"
    ]
@@ -206,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +363,11 @@
     "\n",
     "        # Initialize the dataset, since Moirai support multivariate time series forecast, it does not require\n",
     "        # to convert the original data into univariate\n",
-    "        to_univariate = False if Dataset(name=ds_name, term=term,to_univariate=False).target_dim == 1 else True\n",
+    "        to_univariate = (\n",
+    "            False\n",
+    "            if Dataset(name=ds_name, term=term, to_univariate=False).target_dim == 1\n",
+    "            else True\n",
+    "        )\n",
     "        dataset = Dataset(name=ds_name, term=term, to_univariate=to_univariate)\n",
     "\n",
     "        predictor = MoiraiQuantilePredictor(\n",
