--- a/notebooks/timecopilot.ipynb
+++ b/notebooks/timecopilot.ipynb
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "RMvE9Cx9Lj_D"
       },
@@ -173,12 +173,12 @@
         "\n",
         "\n",
         "def evaluate_forecaster(\n",
-        "        forecaster: Forecaster,\n",
-        "        dataset_name: str,\n",
-        "        term: str,\n",
-        "        output_path: str,\n",
-        "        storage_path: str,\n",
-        "    ):\n",
+        "    forecaster: Forecaster,\n",
+        "    dataset_name: str,\n",
+        "    term: str,\n",
+        "    output_path: str,\n",
+        "    storage_path: str,\n",
+        "):\n",
         "    \"\"\"Evaluate a forecaster on a GIFT-Eval dataset defined by dataset name and term.\"\"\"\n",
         "\n",
         "    # TimeCopilot's GIFT-Eval loader handles dataset preprocessing automatically\n",
@@ -231,7 +231,7 @@
         "import torch\n",
         "\n",
         "\n",
-        "if torch.cuda.is_available(): # remove if you want to run on CPU\n",
+        "if torch.cuda.is_available():  # remove if you want to run on CPU\n",
         "    combinations = [\n",
         "        (\"m4_weekly\", \"short\"),\n",
         "        (\"bizitobs_l2c/H\", \"short\"),\n",
@@ -249,12 +249,12 @@
         "        )\n",
         "\n",
         "    # Load consolidated results in GIFT-Eval format\n",
-        "    eval_df = pd.read_csv(\"./results/timecopilot/all_results.csv\")\n"
+        "    eval_df = pd.read_csv(\"./results/timecopilot/all_results.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -688,9 +688,9 @@
       ],
       "source": [
         "if torch.cuda.is_available():\n",
-        "  from IPython.display import display\n",
+        "    from IPython.display import display\n",
         "\n",
-        "  display(eval_df)"
+        "    display(eval_df)"
       ]
     },
     {
@@ -1274,13 +1274,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "NETa8_6Y8ip-"
       },
       "outputs": [],
       "source": [
-        "official_eval_sn = official_eval_sn.set_index(\"dataset\").loc[eval_df_sn[\"dataset\"]].reset_index()"
+        "official_eval_sn = (\n",
+        "    official_eval_sn.set_index(\"dataset\").loc[eval_df_sn[\"dataset\"]].reset_index()\n",
+        ")"
       ]
     },
     {
