--- a/notebooks/tsorchestra.ipynb
+++ b/notebooks/tsorchestra.ipynb
@@ -4,85 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart - Run Kairos on GiftEval\n",
+    "# Quickstart - Run TS Orchestra on GiftEval\n",
     "\n",
-    "This notebook shows how to run [Kairos](https://github.com/foundation-model-research/Kairos) on the gift-eval benchmark.\n",
+    "This notebook shows how to run [TS Orchestra](https://github.com/foundation-model-research/Kairos) on the GIFT-Eval benchmark.\n",
     "\n",
-    "Make sure you download the gift-eval benchmark and set the `GIFT-EVAL` environment variable correctly before running this notebook.\n",
-    "\n",
-    "\n",
-    "## Setup Instructions\n",
-    "\n",
-    "1. **Optional but suggested: Install conda environment specifed in Kairos Repo**\n",
-    "\n",
-    "```bash\n",
-    "conda create --name kairos python=3.10\n",
-    "conda activate kairos\n",
-    "```\n",
-    "\n",
-    "2. **Install Kairos**\n",
-    "\n",
-    "```bash\n",
-    "git clone https://github.com/foundation-model-research/Kairos.git\n",
-    "cd Kairos\n",
-    "pip install -r requirements.txt\n",
-    "```\n",
-    "\n",
-    "3. **Install additional dependecies needed for GiftEval benchmark**\n",
-    "\n",
-    "```bash\n",
-    "pip install gluonts==0.14.4 dotenv datasets==3.5.1\n",
-    "```"
+    "Make sure you download the GIFT-Eval benchmark and set the `GIFT-EVAL` environment variable correctly before running this notebook."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting up the data and metrics"
+    "## Setup "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import os\n",
-    "\n",
-    "from gluonts.model import evaluate_model, Forecast\n",
-    "from gluonts.model.forecast import SampleForecast\n",
-    "from gluonts.itertools import batcher\n",
-    "from gluonts.time_feature import get_seasonality\n",
-    "from gluonts.ev.metrics import (\n",
-    "    MAE,\n",
-    "    MAPE,\n",
-    "    MASE,\n",
-    "    MSE,\n",
-    "    MSIS,\n",
-    "    ND,\n",
-    "    NRMSE,\n",
-    "    RMSE,\n",
-    "    SMAPE,\n",
-    "    MeanWeightedSumQuantileLoss,\n",
-    ")\n",
-    "\n",
-    "import logging\n",
-    "\n",
-    "from gift_eval.data import Dataset\n",
-    "\n",
+    "# TODO: Download TS Orchestra and set up env path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose the datasets to evaluate TS Orchestra on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
-    "\n",
     "from dotenv import load_dotenv\n",
-    "\n",
-    "from Kairos.tsfm.model.kairos import AutoModel\n",
-    "from tqdm.auto import tqdm\n",
-    "from typing import List\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import pandas as pd\n",
-    "import re\n",
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
@@ -96,9 +55,28 @@
     "# Get union of short and med_long datasets\n",
     "all_datasets = list(set(short_datasets.split() + med_long_datasets.split()))\n",
     "\n",
-    "dataset_properties_map = json.load(open(\"dataset_properties.json\"))\n",
+    "dataset_properties_map = json.load(open(\"dataset_properties.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gluonts.ev.metrics import (\n",
+    "    MSE,\n",
+    "    MAE,\n",
+    "    MASE,\n",
+    "    MAPE,\n",
+    "    SMAPE,\n",
+    "    MSIS,\n",
+    "    RMSE,\n",
+    "    NRMSE,\n",
+    "    ND,\n",
+    "    MeanWeightedSumQuantileLoss,\n",
+    ")\n",
     "\n",
-    "# Instantiate the metrics\n",
     "metrics = [\n",
     "    MSE(forecast_type=\"mean\"),\n",
     "    MSE(forecast_type=0.5),\n",
@@ -120,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KairosPredictor"
+    "Create the ensemble."
    ]
   },
   {
@@ -129,108 +107,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pad_or_truncate(sequence, max_length=2048, pad_value=np.nan):\n",
-    "    \"\"\"\n",
-    "    Pads or truncates a sequence on the left to a specified max_length.\n",
+    "# TODO: Load models\n",
     "\n",
-    "    Args:\n",
-    "        sequence (list or np.ndarray): The input sequence.\n",
-    "        max_length (int): The target length.\n",
-    "        pad_value (int or float): The value to use for padding, defaults to np.nan.\n",
-    "\n",
-    "    Returns:\n",
-    "        np.ndarray: A NumPy array of length max_length.\n",
-    "    \"\"\"\n",
-    "    seq_np = np.array(sequence)\n",
-    "    current_length = len(seq_np)\n",
-    "\n",
-    "    if current_length < max_length:\n",
-    "        # If the current length is less than the target, calculate the required padding\n",
-    "        padding_size = max_length - current_length\n",
-    "        # Use np.pad to add padding to the left\n",
-    "        # (padding_size, 0) means pad `padding_size` elements at the beginning of the first (and only) axis\n",
-    "        return np.pad(seq_np, (padding_size, 0), \"constant\", constant_values=pad_value)\n",
-    "    else:\n",
-    "        # If the current length is greater than or equal to the target, truncate to the last max_length elements\n",
-    "        return seq_np[-max_length:]\n",
-    "\n",
-    "\n",
-    "class KairosPredictor:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        model_path,\n",
-    "        prediction_length: int,\n",
-    "        *args,\n",
-    "        **kwargs,\n",
-    "    ):\n",
-    "        print(\"prediction_length:\", prediction_length)\n",
-    "        self.prediction_length = prediction_length\n",
-    "        # 1. Check for CUDA availability and set the primary device\n",
-    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "        print(f\"Using device: {self.device}\")\n",
-    "\n",
-    "        # 2. Load the model\n",
-    "        self.model = AutoModel.from_pretrained(model_path, trust_remote_code=True)\n",
-    "\n",
-    "        # 3. Move the model to the primary device\n",
-    "        self.model.to(self.device)\n",
-    "\n",
-    "    def predict(self, test_data_input, batch_size: int = 256) -> List[Forecast]:\n",
-    "        self.model.eval()\n",
-    "        model = self.model\n",
-    "        while True:\n",
-    "            try:\n",
-    "                # Generate forecast samples\n",
-    "                forecast_outputs = []\n",
-    "                with torch.no_grad():\n",
-    "                    for batch in tqdm(batcher(test_data_input, batch_size=batch_size)):\n",
-    "                        context = [\n",
-    "                            torch.tensor(\n",
-    "                                pad_or_truncate(entry[\"target\"], max_length=2048)\n",
-    "                            )\n",
-    "                            for entry in batch\n",
-    "                        ]\n",
-    "                        forecast_outputs.append(\n",
-    "                            model(\n",
-    "                                past_target=torch.stack(context).to(self.device),\n",
-    "                                prediction_length=self.prediction_length,\n",
-    "                                generation=True,\n",
-    "                                infer_is_positive=True,\n",
-    "                                force_flip_invariance=True,\n",
-    "                            )[\"prediction_outputs\"]\n",
-    "                            .detach()\n",
-    "                            .cpu()\n",
-    "                            .numpy()\n",
-    "                        )\n",
-    "                forecast_outputs = np.concatenate(forecast_outputs)\n",
-    "                break\n",
-    "            except torch.cuda.OutOfMemoryError:\n",
-    "                print(\n",
-    "                    f\"OutOfMemoryError at batch_size {batch_size}, reducing to {batch_size // 2}\"\n",
-    "                )\n",
-    "                batch_size //= 2\n",
-    "\n",
-    "        # Convert forecast samples into gluonts Forecast objects\n",
-    "        forecasts = []\n",
-    "        for item, ts in zip(forecast_outputs, test_data_input):\n",
-    "            forecast_start_date = ts[\"start\"] + len(ts[\"target\"])\n",
-    "            forecasts.append(\n",
-    "                SampleForecast(samples=item, start_date=forecast_start_date)\n",
-    "            )\n",
-    "\n",
-    "        return forecasts"
+    "# TODO: Create forecaster"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation"
+    "Evaluate TS Orchestra."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +235,16 @@
     }
    ],
    "source": [
+    "import logging\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "from gluonts.model import evaluate_model\n",
+    "from gluonts.time_feature import get_seasonality\n",
+    "\n",
+    "from gift_eval.data import Dataset\n",
+    "\n",
+    "\n",
     "class WarningFilter(logging.Filter):\n",
     "    def __init__(self, text_to_filter):\n",
     "        super().__init__()\n",
@@ -365,13 +266,8 @@
     "    \"car_parts_with_missing\": \"car_parts\",\n",
     "}\n",
     "\n",
-    "# Model Configuration\n",
-    "# model_name = \"Kairos_10m\"\n",
-    "# model_path = \"mldi-lab/Kairos_10m\"\n",
-    "# model_name = \"Kairos_23m\"\n",
-    "# model_path = \"mldi-lab/Kairos_23m\"\n",
-    "model_name = \"Kairos_50m\"\n",
-    "model_path = \"mldi-lab/Kairos_50m\"\n",
+    "\n",
+    "model_name = \"tsorchestra\"\n",
     "\n",
     "# set the output directory and CSV file path\n",
     "output_dir = f\"../results/{model_name}\"\n",
@@ -450,10 +346,10 @@
     "        dataset = Dataset(name=ds_name, term=term, to_univariate=to_univariate)\n",
     "        season_length = get_seasonality(dataset.freq)\n",
     "        print(f\"Dataset size: {len(dataset.test_data)}\")\n",
-    "        predictor = KairosPredictor(\n",
-    "            model_path=model_path,\n",
-    "            prediction_length=dataset.prediction_length,\n",
-    "        )\n",
+    "\n",
+    "        # TODO: Use forecaster to create predictor\n",
+    "        predictor = None\n",
+    "\n",
     "        # Measure the time taken for evaluation\n",
     "        res = evaluate_model(\n",
     "            predictor,\n",
@@ -489,135 +385,6 @@
     "            )\n",
     "\n",
     "        print(f\"Results for {ds_name} have been written to {csv_file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Optional: Sort by lexicographic order, frequency, and predicted length of the dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully loaded file.\n",
-      "Data sorting complete.\n",
-      "Processing complete! Results saved to '../results/Kairos_50m/all_results.csv'.\n",
-      "\n",
-      "Preview of the first 5 rows of the processed data:\n",
-      "                 dataset       model  eval_metrics/MSE[mean]  \\\n",
-      "1   bizitobs_l2c/H/short  Kairos_50m               57.918098   \n",
-      "2  bizitobs_l2c/H/medium  Kairos_50m               63.733904   \n",
-      "3    bizitobs_l2c/H/long  Kairos_50m               76.498069   \n",
-      "0      m4_weekly/W/short  Kairos_50m           350282.823003   \n",
-      "\n",
-      "   eval_metrics/MSE[0.5]  eval_metrics/MAE[0.5]  eval_metrics/MASE[0.5]  \\\n",
-      "1              58.555671               4.736005                0.480060   \n",
-      "2              63.673946               4.684196                0.474470   \n",
-      "3              76.727667               5.158500                0.556074   \n",
-      "0          342247.636980             303.264569                2.431396   \n",
-      "\n",
-      "   eval_metrics/MAPE[0.5]  eval_metrics/sMAPE[0.5]  eval_metrics/MSIS  \\\n",
-      "1                0.451625                 0.553508           4.586803   \n",
-      "2                0.485989                 0.708163           6.840211   \n",
-      "3                0.603112                 0.714667          11.137332   \n",
-      "0                0.076217                 0.074086          20.033768   \n",
-      "\n",
-      "   eval_metrics/RMSE[mean]  eval_metrics/NRMSE[mean]  eval_metrics/ND[0.5]  \\\n",
-      "1                 7.610394                  0.410220              0.255283   \n",
-      "2                 7.983352                  0.483404              0.283635   \n",
-      "3                 8.746317                  0.534250              0.315096   \n",
-      "0               591.846959                  0.107825              0.055250   \n",
-      "\n",
-      "   eval_metrics/mean_weighted_sum_quantile_loss        domain  num_variates  \n",
-      "1                                      0.208519  Web/CloudOps             7  \n",
-      "2                                      0.238645  Web/CloudOps             7  \n",
-      "3                                      0.277949  Web/CloudOps             7  \n",
-      "0                                      0.044315      Econ/Fin             1  \n"
-     ]
-    }
-   ],
-   "source": [
-    "def process_and_sort_csv(PATH):\n",
-    "    \"\"\"\n",
-    "    Sort by lexicographic order, frequency, and predicted length of the dataset\n",
-    "\n",
-    "    Args:\n",
-    "        PATH (str): The directory path containing the CSV file.\n",
-    "    \"\"\"\n",
-    "    input_filepath = f\"{PATH}/all_results.csv\"\n",
-    "    output_filepath = f\"{PATH}/all_results.csv\"\n",
-    "    # Check if the input file exists\n",
-    "    if not os.path.exists(input_filepath):\n",
-    "        print(\n",
-    "            f\"Error: File not found '{input_filepath}'. Please ensure the file exists and the path is correct.\"\n",
-    "        )\n",
-    "        return\n",
-    "\n",
-    "    # 1. Load the CSV file\n",
-    "    df = pd.read_csv(input_filepath)\n",
-    "    print(\"Successfully loaded file.\")\n",
-    "\n",
-    "    # 2. Define the function for sorting\n",
-    "    def get_sort_key(dataset_name):\n",
-    "        \"\"\"\n",
-    "        Generates a tuple for sorting based on the dataset string.\n",
-    "        Sorting rules:\n",
-    "        1. Before the first '/': Lexicographical order\n",
-    "        2. Before the second '/': By number, then by S, T, H, D, W, M order\n",
-    "        3. After the second '/': By short, medium, long order\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            part1, part2, part3 = dataset_name.split(\"/\")\n",
-    "        except ValueError:\n",
-    "            # Handle strings that do not match the 'part1/part2/part3' format, placing them at the end\n",
-    "            return (dataset_name, float(\"inf\"), float(\"inf\"), float(\"inf\"))\n",
-    "\n",
-    "        # Define the sort mapping for the second part\n",
-    "        time_unit_map = {\"S\": 0, \"T\": 1, \"H\": 2, \"D\": 3, \"W\": 4, \"M\": 5}\n",
-    "        # Use regex to separate the number and the unit\n",
-    "        match = re.match(r\"(\\d*)(\\w+)\", part2)\n",
-    "        if match:\n",
-    "            num_str, unit = match.groups()\n",
-    "            num = int(num_str) if num_str else 0  # Default to 0 if no number prefix\n",
-    "            unit_order = time_unit_map.get(unit, float(\"inf\"))\n",
-    "        else:\n",
-    "            num, unit_order = float(\"inf\"), float(\n",
-    "                \"inf\"\n",
-    "            )  # Place at the end if format doesn't match\n",
-    "\n",
-    "        # Define the sort mapping for the third part\n",
-    "        length_map = {\"short\": 0, \"medium\": 1, \"long\": 2}\n",
-    "        length_order = length_map.get(\n",
-    "            part3, float(\"inf\")\n",
-    "        )  # Place at the end if not found\n",
-    "\n",
-    "        # Return a tuple; Pandas will sort by the elements of the tuple in order\n",
-    "        return (part1, unit_order, num, length_order)\n",
-    "\n",
-    "    # 3. Apply the sorting logic\n",
-    "    # Create a temporary column to store the sort keys\n",
-    "    df[\"sort_key\"] = df[\"dataset\"].apply(get_sort_key)\n",
-    "\n",
-    "    # Sort by this temporary column, then drop it\n",
-    "    df_sorted = df.sort_values(by=\"sort_key\").drop(columns=\"sort_key\")\n",
-    "    print(\"Data sorting complete.\")\n",
-    "\n",
-    "    # 4. Save the processed data to a new file\n",
-    "    df_sorted.to_csv(output_filepath, index=False)\n",
-    "    print(f\"Processing complete! Results saved to '{output_filepath}'.\")\n",
-    "    print(\"\\nPreview of the first 5 rows of the processed data:\")\n",
-    "    print(df_sorted.head())\n",
-    "\n",
-    "\n",
-    "process_and_sort_csv(output_dir)"
    ]
   }
  ],
