--- a/notebooks/tsorchestra.ipynb
+++ b/notebooks/tsorchestra.ipynb
@@ -6,16 +6,25 @@
    "source": [
     "# Quickstart - Run TS Orchestra on GiftEval\n",
     "\n",
-    "This notebook shows how to run [TS Orchestra](https://github.com/foundation-model-research/Kairos) on the GIFT-Eval benchmark.\n",
+    "This notebook shows how to run TS Orchestra on the gift-eval benchmark.\n",
     "\n",
-    "Make sure you download the GIFT-Eval benchmark and set the `GIFT-EVAL` environment variable correctly before running this notebook."
+    "Make sure you download the gift-eval benchmark and set the `GIFT-EVAL` environment variable correctly before running this notebook.\n",
+    "\n",
+    "We will use the `Dataset` class to load the data and run the model. If you have not already please check out the [dataset.ipynb](./dataset.ipynb) notebook to learn more about the `Dataset` class. We are going to just run the model on two datasets for brevity. But feel free to run on any dataset by changing the `short_datasets` and `med_long_datasets` variables below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup "
+    "## Setting up TS Orchestra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clone the TS Orchestra repository and add the file to the python path."
    ]
   },
   {
@@ -24,14 +33,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Download TS Orchestra and set up env path"
+    "# TODO: Change this to TS Orchestra\n",
+    "# !git clone https://github.com/PriorLabs/tabpfn-time-series.git\n",
+    "# %pip install -r tabpfn-time-series/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add both the main repository and the gift_eval subdirectory to the path\n",
+    "sys.path.append(os.path.abspath(\"tsorchestra\"))\n",
+    "print(\"Added tsorchestra to Python path\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choose the datasets to evaluate TS Orchestra on."
+    "Specify the datasets to evaluate TS Orchestra on."
    ]
   },
   {
@@ -56,6 +81,13 @@
     "all_datasets = list(set(short_datasets.split() + med_long_datasets.split()))\n",
     "\n",
     "dataset_properties_map = json.load(open(\"dataset_properties.json\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instantiate the metrics to use during evaluation."
    ]
   },
   {
@@ -107,9 +139,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Load models\n",
+    "from tsorchestra.models.foundation import Moirai, Sundial, Toto\n",
+    "from tsorchestra.models.ensemble import SLSQPEnsemble\n",
     "\n",
-    "# TODO: Create forecaster"
+    "batch_size = 32\n",
+    "\n",
+    "# Metric to optimize during cross-validation\n",
+    "metric = \"mae\"\n",
+    "\n",
+    "# Load models\n",
+    "models = [\n",
+    "    Moirai(batch_size=batch_size),\n",
+    "    Sundial(batch_size=batch_size),\n",
+    "    Toto(batch_size=batch_size),\n",
+    "]\n",
+    "\n",
+    "# Use models to create ensemble forecaster\n",
+    "forecaster = SLSQPEnsemble(\n",
+    "    models=models,\n",
+    "    metric=metric,\n",
+    ")"
    ]
   },
   {
@@ -235,29 +284,18 @@
     }
    ],
    "source": [
-    "import logging\n",
     "import os\n",
     "import csv\n",
     "\n",
+    "from gift_eval.data import Dataset\n",
     "from gluonts.model import evaluate_model\n",
     "from gluonts.time_feature import get_seasonality\n",
+    "from pytorch_lightning import seed_everything\n",
+    "from tsorchestra.models.common.gluonts_predictor import GluonTSPredictor\n",
     "\n",
-    "from gift_eval.data import Dataset\n",
+    "# Set the seed for reproducibility\n",
+    "seed_everything(42, workers=True, verbose=True)\n",
     "\n",
-    "\n",
-    "class WarningFilter(logging.Filter):\n",
-    "    def __init__(self, text_to_filter):\n",
-    "        super().__init__()\n",
-    "        self.text_to_filter = text_to_filter\n",
-    "\n",
-    "    def filter(self, record):\n",
-    "        return self.text_to_filter not in record.getMessage()\n",
-    "\n",
-    "\n",
-    "gts_logger = logging.getLogger(\"gluonts.model.forecast\")\n",
-    "gts_logger.addFilter(\n",
-    "    WarningFilter(\"The mean prediction is not stored in the forecast data\")\n",
-    ")\n",
     "\n",
     "pretty_names = {\n",
     "    \"saugeenday\": \"saugeen\",\n",
@@ -347,8 +385,7 @@
     "        season_length = get_seasonality(dataset.freq)\n",
     "        print(f\"Dataset size: {len(dataset.test_data)}\")\n",
     "\n",
-    "        # TODO: Use forecaster to create predictor\n",
-    "        predictor = None\n",
+    "        predictor = GluonTSPredictor(forecaster=forecaster)\n",
     "\n",
     "        # Measure the time taken for evaluation\n",
     "        res = evaluate_model(\n",
